test_suite/ui/with_fields.stderr
error: Bitflag variants cannot contain additional data
 --> ui/with_fields.rs:8:8
  |
8 |     Bar(u32),
  |        ^^^^^
